feat: creating endpoint for dashboard;
